--- a/Html/Checkout.html
+++ b/Html/Checkout.html
@@ -26,7 +26,7 @@
                     <a class="nav-link" href="./admin.html"><i class="fa-regular fa-user"></i></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./Checkout.html"><i class="fa-regular fa-credit-card"></i></i></a>
+                    <a class="nav-link" href="../Html/Checkout.html"><i class="fa-regular fa-credit-card"></i></i></a>
                   </li>
                 </ul>
               </div>
@@ -34,12 +34,37 @@
           </nav>
     </header>
     <main>
+      <div class="grid-container3">
+        <div class="layout"></div>
+        <div class="check"></div>
+<h4>Checkout</h4>
 
+<h5 class="newer"><i  class="new fa-solid fa-truck-fast"></i>Shipping</h5>
+        <h3 class="co-head"> If shipping is needed please understand the information provided below:</h3>
+        <br>
+        <p class="sent1">Shipping takes up to 10 business days.<br></p>
+        <p class="sent2"> Shipping will cost R60.</p>
+        <p class="sent3">We only ship NATIONWIDE and to selected NEIGHBORING COUNTRY(Zimbabwe, Namibia, Zambia, Swaziland and Lesotho)</p>
+<p class="sent4">If you are really interested in purchasing but you are from any other country that is not mentioned you may use external an shipment plan(which will still cost you R80 from our side.) </p>
+
+<!-- table  -->
+<table class="t2 table">
+  <thead>
+    <tr>
+      <th scope="col">NO.</th>
+      <th scope="col">Icon</th>
+      <th scope="col">Title</th>
+      <th scope="col">Price</th>
+    </tr>
+  </thead>
+  <tbody class="done">
+  </tbody>
+</table>
+      
+      </div>
 
     </main>
-    <footer>
-
-    </footer>
+    <footer>Copyright &copy; 2022</footer>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <!-- Font Awesome -->
