--- a/Html/admin.html
+++ b/Html/admin.html
@@ -52,7 +52,7 @@
         <th scope="col"><button type="button" class="add btn btn-secondary"  data-bs-toggle="modal" data-bs-target="#Ad-popup">Add</button></th>
       </tr>
     </thead>
-    <tbody class="content">
+    <tbody class="Albums">
     </tbody>
   </table>
   <!--Add Modal -->
@@ -66,15 +66,15 @@
       <div class="modal-body">
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">NO.</label>
-          <input type="number" class="form-control text-danger" id="Vinyltitle" placeholder="eg. number" required>
+          <input type="number" class="form-control text-danger" id="Vinylid" placeholder="eg. number" required>
         </div>
         <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Vynil cover</label>
-          <input type="text" class="form-control text-danger" id="Vinyltitle" placeholder="eg. URL">
+          <label for="exampleFormControlInput1" class="form-label">Vinyl cover</label>
+          <input type="text" class="form-control text-danger" id="VinylCover" placeholder="eg. URL">
         </div>
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">Vinyl Name</label>
-          <input type="text" class="form-control text-danger" id="Vinyltitle" placeholder="eg. Certified Loverboy" required>
+          <input type="text" class="form-control text-danger" id="VinylTitle" placeholder="eg. Certified Loverboy" required>
         </div>
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">Artist</label>
@@ -88,7 +88,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="confirm btn btn-primary">Confirm</button>
+        <button type="button" class="confirm btn btn-primary" data-bs-dismiss="modal">Confirm</button>
       </div>
     </div>
   </div>
