--- a/Html/Checkout.html
+++ b/Html/Checkout.html
@@ -51,7 +51,6 @@
 <table class="t2 table">
   <thead>
     <tr>
-      <th scope="col">NO.</th>
       <th scope="col">Icon</th>
       <th scope="col">Title</th>
       <th scope="col">Price</th>
@@ -59,10 +58,10 @@
   </thead>
   <tbody class="done">
   </tbody>
-</table>
-      
+  <tfoot>
+  </tfoot>
+</table>  
       </div>
-
     </main>
     <footer>Copyright &copy; 2022</footer>
     <!-- JavaScript Bundle with Popper -->
